--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tjournal-clone",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,12 +16,11 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.38.1"
+    "sass": "^1.38.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.19",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
-    "typescript": "4.4.2"
+    "typescript": "^4.3.5"
   }
 }
